# hades

./: .env.local  .gitignore  LICENSE  Makefile  README.md  bootstrap.sh  compose.yml  inject.json
backend/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml  requirements.txt
backend/hades/: main.py
backend/hades/agents/: __init__.py  agent.py  operator.py  planner.py
backend/hades/client/: __init__.py  client.py
backend/hades/core/: __init__.py  constants.py  logging.py  parser.py  timestamps.py
backend/hades/core/utils/: __init__.py  highlight.py  timestamp.py
backend/hades/messages/: rabbitmq.py
backend/hades/messages/rabbitmq/: __init__.py  broker.py  client.py  config.py  consumer.py  exchange.py  publisher.py
backend/hades/server/: __init__.py  server.py  task_matrix.py
backend/hades/tasks/: impact.py  initial_access.py  preparation.py  reconnaissance.py
backend/hades/tools/: __init__.py
backend/hades/tools/bash/: __init.py  bash.py
backend/hades/tools/hydra/: __init__.py  hydra.py
backend/hades/tools/metasploit/: __init__.py  msfconsole.py  msfconsole_args.py  payloads.py
backend/hades/tools/nmap/: __init__.py  nmap.py  nmap_args.py
backend/hades/tools/ssh/: ssh.py
docs/: README.md
elasticsearch/: Dockerfile  db.py  elasticsearch.yml
frontend/: Dockerfile  entrypoint.sh  go.mod  main.go
frontend-proxy/: Dockerfile  requirements.txt
kibana/: Dockerfile  kibana.yml
llama/: Dockerfile  demo.sh
llm-server/: Dockerfile  demo.sh  (+1 more)
vllm/: .gitignore  README.md  hades_data_llm.py  pyproject.toml
(+51 files in other folders)
