[tool.poetry]
name = "hades"
version = "0.1.0"
description = "Harnessing AI to Disrupt and Evaluate Security (HADES)"
authors = ["cyberphor <victor.fernandez19.mil@army.mil>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
autogen-agentchat = ">=0.2,<0.4"
llama-cpp-python = "^0.3.5"
huggingface-hub = "^0.27.0"
numpy = ">=1.26"
pika = "^1.3.2"
pygments = "^2.19.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.scripts]
hades = "hades.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
